# gait-based-identification

./: README.md  pyproject.toml
src/: config.py  main.py
src/data/: loader.py
src/model/: describe_net.py
src/training/: train.py
