[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Dio Ngei Okparaji <dio.ngei@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.10.0"
numpy = "^2.4.2"
kagglehub = "^1.0.0"
scikit-learn = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
